--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Flask-API==1.0
 Flask-Cors==3.0.6
 Flask-HTTPAuth==3.2.4
 Flask-RESTful==0.3.6
+gunicorn==19.9.0
 idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
