--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: python
 python:
-  - "3.6"
-
+  - "3.4"
+cache: pip
 install:
   - pip install -r requirements.txt
+  - pip install coveralls
 script:
   - python test.py -unit
+after_success:
+  - coveralls
